# bcit-courses

./: .gitignore  ChangeLog  ClientStateChart.dia  README  ServerStateChart.dia  configure.ac  main.c
Analysis/statistics/: tcp_source_country.txt  traffic_byport.txt
BLAW 3600 - Computers & the Law/: Numbers.txt
BLAW 3600 - Computers & the Law/Homework/: Case Law Brief #2.pages  Week #1.pages  Week #10.pages  Week #11.pages  Week #12.pages  Week #2.pages  Week #3.pages  Week #4.pages  Week #9.pages
BUSA 6800 - Strategic Management/: Case C Tables.numbers  Experimental Exercise - Porter's Analysis.pages  Silly Math.nb
COMM 2202 - Business and Technical Correspondence/Assignment #3.pages/: droppedImage-1.pict
COMM 2203 - Business and Technical Reports/Formal Report/: FXHistory - Historical Currency Exchange Rates.webloc  Formal Report Assignment  Formal Report Assignment.xls
COMP 1630 - Relational Database Design and SQL/Answers/: Week 01 - Group Answers.doc  Week 02 - Group Answers.doc  Week 03 - Group Answers.doc  Week 04 - Group Answers.doc  Week 05 - Group Answers.doc  Week 06 - Group Answers.doc
COMP 1630 - Relational Database Design and SQL/Project 1/: Part A_ ERD Diagram.ai  Project Instructions.doc  Project.doc
COMP 1630 - Relational Database Design and SQL/Project 2/: Project 2.doc  ordersanddata.sql
COMP 1630 - Relational Database Design and SQL/Week 02/: Class Notes.doc  ER Diagrams in Access - Complete.doc  ER Diagrams in Access.doc  ERD Homework.doc  Group Questions.doc  Individual Homework.doc
COMP 1630 - Relational Database Design and SQL/Week 03/: Class Notes.doc  Group Answers.doc  Group Questions.doc  Individual Homework - A.doc  Individual Homework - B.doc  Installing SQL Server.doc
COMP 1630 - Relational Database Design and SQL/Week 04/: Class Notes.doc.doc  Group Answers.doc  Group Questions.doc  Individual Homework.doc
COMP 1630 - Relational Database Design and SQL/Week 05/: DDL.doc  Group Questions.doc  Mod SQL Data Definition (DDL).ppt
COMP 1630 - Relational Database Design and SQL/Week 06/: DML Reference.doc  Group Answers.doc  Group Questions.doc  pubs.sql
COMP 1630 - Relational Database Design and SQL/Week 07/: ProgrammingSQL.doc.dot  SQL Programming.doc  Week7InClass.doc.dot
COMP 1630 - Relational Database Design and SQL/Week 08/: Class Notes.doc  Group Questions.doc  Join Syntax Review.doc  Mod - Stored Procedures.ppt  Mod - Triggers.ppt  Mod - Views.ppt
COMP 1850 - Introduction to Web Development and Design/: Nav Menu.psd  header.psd
COMP 2121 - Discrete Mathematic/: Non-Integer Factorial.nb  comp2121_assignment01_summer2008.txt  comp2121_assignment02_summer2008.txt  comp2121_midterm_exam.doc  marking_comp2121_assignment01_summer2008.txt  nXr.nb
COMP 2765 - Linux:Unix Operating System Fundamentals/: Accessing Obiwan.doc  Accessing Resources.txt  Additional Web Sites - Linux.doc  COMP2765 - D. Nielsen.doc  COMP2765 Midterm Review Exercise Solution.doc  COMP2765 Midterm Review Exercise.doc
COMP 2910 - Projects/: Project.tmproj  Samples.tmproj
COMP 3425 - Intermediate C Programming/: Comp 3425 Course Outline.doc
COMP 3770 - Programming Windows/: Assignment Specifications.doc  Outline Comp3770 2008 Win32 Fall.doc
COMP 3908 - Projects/: Mlogger Project Plan.xls
COMP 7081 - Technical Issues in Software Development/: Software Engineering A Practitioner's Approach  Software Engineering Information Center-.webloc
COMP 8505 - Special Topics in Network and Security Development/milliways/doorman-0.81/: AUTHORS  ChangeLog  INSTALL  KNOCK.CFG  KNOCK.HTM  KNOCK.TXT  KNOCKCFG.HTM  KNOCKCFG.TXT  Makefile.am  Makefile.in  README  README.TXT  WINNOCK.DSP  WINNOCK.DSW  acinclude.m4  bootstrap  config.h.in  config_win.h  configure  configure.ac  constants.h  doormand.8  doormand.c  doormand.cf.5  doormand.cf.EXAMPLE  guestlist.5  guestlist.EXAMPLE  install-sh  ipchains_add  ipchains_delete  ipf_add  ipf_delete  ipfw_add  ipfw_delete  iptables_add  iptables_delete  knock.1  knock.c  knockcf  knockcf.5  (+7 more)
COMP 8505 - Special Topics in Network and Security Development/milliways/doorman-0.81/Replacement_fns/: bpf.h  daemon.c  getopt.c  hmac_md5.c  hmac_md5.h  md5.c  md5.h  pcap.h
Client/: config.txb
Design Documentation/: Client.dia  server.dia
Design Work/: Final Design.pages
Documentation/: Network Design.graffle  Users & Passwords.numbers
LIBS 7001 - Critical Reading & Writing/: Analysis Essay - {insert noun} icon.pages  Midterm Exam – Cause & Effect.pages  Seminar - Discussion.pages  Seminar - Essay.pages
LIBS 7009 - Humour Studies/: Assignment #1 - Humour Journal.pages  Assignment #2 - Philosophy.pages  Assignment #3 - Comic Resource.pages  Comic Presentation.pages
MKTG 2341 - Intro to Marketing Research/: Norgren_Steffen_5D_Quiz.xlsm  SnapOnline Login.webloc
Report/: Final Report.pages
Server/: headerMain.h
Source/: CommAudio.vcproj  helper.c  resource.h  win_events.h
branches/resize_disabling/: Makefile.am
branches/resize_disabling/src/: cliopts.c  generators.c  gui_funcs.c  spry.h
design/: Diagrams.doc  Final Design.doc  Final Design.pages  FinalDesign.doc  Iteration 1 STD  March 05 Readme  March 7 Readme  Pseudocode.doc  Record.dia  full pseudo.doc
info/: lib.txt
reports/: Initial Write-up.odt  Project Proposal.pages  Status Report Template.odt  StatusReport_Template.odt  benchmarking.odt  gantt_chart.planner
src/: callbacks.h  main.c  spry.h
trunk/: ChangeLog  INSTALL  Makefile  Makefile.in  aclocal.m4  configure  configure.ac  configure.ac.bak  connection.c  main.c  mkdoc.sh
trunk/src/: Makefile.am  Makefile.am.bak  Makefile.in  browser.c  browser.h  callbacks.c  callbacks.h  cliopts.c  cliopts.h  generators.c  generators.h  gui_funcs.c  gui_funcs.h  main.c  spry.h
utils/: libs.sh  memory.sh  spry_vs_midori  sunspider_test
(+7373 files in other folders)
